fixed dockercompose by adding a dockerfile for tomcat

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,10 +5,8 @@ services:
         ports:
             - 8021:80
     tomcat:
-        image: tomcat:9.0
+        build: ./dockerfiles/tomcat
         ports:
             - 8022:8080
         volumes:
             - ./deployments:/usr/local/tomcat/webapps/
-        command:
-            - "catailna.sh run"
